--- a/ditm-panel.css
+++ b/ditm-panel.css
@@ -26,7 +26,10 @@ html, body {
     width: 100%;
     display: flex;
 }
-#urls-box {
+#saved-urls-box {
+    flex: auto;
+}
+#used-urls-box {
     flex: auto;
 }
 #url {
