--- a/ditm-panel.css
+++ b/ditm-panel.css
@@ -22,6 +22,9 @@ html, body {
     width: 100%;
     display: flex;
 }
+#source-chooser {
+    display: flex;
+}
 #source-text-box,
 #source-url-box-inner {
     flex: auto;
