--- a/ditm-panel.css
+++ b/ditm-panel.css
@@ -1,56 +1,112 @@
-html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+/* Imported from m-c/devtools/client/themes/light-theme.css */
+
+body {
+  margin: 0;
 }
-html, body {
-    margin: 0;
-    padding: 0;
+
+.theme-body {
+  background: var(--theme-body-background);
+  color: var(--theme-body-color);
+}
+
+.theme-sidebar {
+  background: var(--theme-sidebar-background);
+  color: var(--theme-body-color);
+}
+
+.theme-selected {
+  background-color: var(--theme-selection-background);
+  color: var(--theme-selection-color);
+}
+
+.theme-toolbar,
+.devtools-toolbar,
+.devtools-sidebar-tabs tabs,
+.devtools-sidebar-alltabs { /* General toolbar styling */
+  color: var(--theme-body-color);
+  background-color: var(--theme-toolbar-background);
+  border-color: var(--theme-splitter-color);
+}
+
+/* ---- */
+
+body {
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-#saved-box {
+
+/* ---- */
+
+#selector-box {
+    width: calc(100% - 4px - 4px);
+    display: grid;
+    grid-template-columns: 8em 1fr 8em;
+    grid-auto-rows: 20px;
+    grid-gap: 4px;
+    margin: 4px;
+}
+
+label {
+    padding: 2px 20px;
+}
+
+#stored-urls {
+    width: 100%;
+}
+
+#used-urls {
+    width: 100%;
+}
+
+#selector-box input[type="button"] {
+    min-width: 6em;
+}
+
+/* ---- */
+
+.source-tab {
+    min-width: 8em;
+}
+.source-tab .filename {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* ---- */
+
+#source-text-box {
+    flex: auto;
+    flex-direction: column;
     width: 100%;
     display: flex;
 }
-#url-box {
-    width: 100%;
-    display: flex;
+
+#source-text-box .devtools-toolbar input[type="button"] {
+    min-width: 8em;
 }
-#action-box {
-    width: 100%;
-    display: flex;
-}
-#source-chooser {
-    display: flex;
-}
-#source-text-box,
-#source-url-box-inner {
-    flex: auto;
-    width: 100%;
-    display: flex;
-}
-#saved-urls-box {
-    flex: auto;
-}
-#used-urls-box {
-    flex: auto;
-}
-#url {
-    flex: auto;
-}
+
 #source-text {
     width: 100%;
     resize: none;
     flex: auto;
 }
+
+/* ---- */
+
+#source-url-box .devtools-toolbar input[type="button"] {
+    min-width: 8em;
+}
+
+#source-url-box-inner {
+    width: calc(100% - 4px - 4px);
+    display: grid;
+    grid-template-columns: 8em 1fr;
+    grid-auto-rows: 20px;
+    grid-gap: 4px;
+    margin: 4px;
+}
+
 #source-url {
     width: 100%;
-}
-label {
-    min-width: 4em;
-}
-input[type="button"] {
-    min-width: 8em;
 }
