Use monospace font (fixes #14)

--- a/ditm-panel.css
+++ b/ditm-panel.css
@@ -105,6 +105,8 @@ input[type="text"] {
     width: 100%;
     resize: none;
     flex: auto;
+    font-family: var(--monospace-font-family);
+    font-size: var(--theme-code-font-size);
 }
 
 /* ---- */
