--- a/devtools-variables.css
+++ b/devtools-variables.css
@@ -25,11 +25,8 @@
   --theme-focus-outline: 1px dotted var(--theme-focus-outline-color);
   --theme-focus-box-shadow-textbox: 0 0 0 1px var(--theme-textbox-box-shadow);
 
-  --toolbarbutton-focus-background: var(--theme-selection-focus-background);
-  --toolbarbutton-focus-color: var(--theme-selection-focus-color);
-  --toolbarbutton-checked-background: var(--theme-selection-background);
-  --toolbarbutton-checked-color: var(--theme-selection-color);
-  --toolbarbutton-checked-focus-background: var(--blue-60);
+  /* Standardizes the height of items in the Watch Expressions and XHR Breakpoints panes */
+  --expression-item-height: 20.5px;
 
   /* The photon animation curve */
   --animation-curve: cubic-bezier(0.07, 0.95, 0, 1);
@@ -52,6 +49,7 @@
   --blue-30: #75baff;
   --blue-40: #45a1ff;
   --blue-50: #0a84ff;
+  --blue-50-a30: rgba(10, 132, 255, 0.3);
   --blue-55: #0074e8;
   --blue-60: #0060df;
   --blue-70: #003eaa;
@@ -69,7 +67,6 @@
   --yellow-65: #be9b00;
   --yellow-70: #a47f00;
   --yellow-80: #715100;
-  --yellow-90: #3e2800;
 
   --red-20: #ffb3d2;
   --red-40: #ff3b6b;
@@ -85,6 +82,7 @@
   --grey-20: #ededf0;
   --grey-25: #e0e0e2;
   --grey-30: #d7d7db;
+  --grey-35: #c3c3c6;
   --grey-40: #b1b1b3;
   --grey-43: #a4a4a4;
   --grey-45: #939395;
@@ -104,6 +102,7 @@
 
 :root.theme-light {
   --theme-body-background: white;
+  --theme-body-emphasized-background: var(--grey-10);
   --theme-sidebar-background: white;
 
   /* Toolbar */
@@ -119,8 +118,13 @@
   --theme-toolbar-separator: var(--grey-90-a10);
 
   /* Toolbar buttons */
-  --toolbarbutton-background: var(--theme-toolbar-background);
-  --toolbarbutton-hover-background: var(--theme-toolbar-hover);
+  --toolbarbutton-background: var(--grey-10);
+  --toolbarbutton-hover-background: var(--grey-20);
+  --toolbarbutton-focus-background: var(--grey-20);
+  --toolbarbutton-focus-color: var(--grey-70);
+  --toolbarbutton-checked-background: var(--blue-55);
+  --toolbarbutton-checked-focus-background: var(--blue-60);
+  --toolbarbutton-checked-color: #ffffff;
 
   /* Buttons */
   --theme-button-background: rgba(12, 12, 13, 0.05);
@@ -134,7 +138,6 @@
   --theme-selection-background: var(--blue-55);
   --theme-selection-background-hover: #f0f9fe;
   --theme-selection-focus-background: var(--toolbarbutton-hover-background);
-  --theme-selection-focus-color: var(--grey-70);
   --theme-selection-color: #ffffff;
 
   /* Border color that splits the toolbars/panels/headers. */
@@ -145,7 +148,6 @@
   /* Icon colors */
   --theme-icon-color: rgba(12, 12, 13, 0.8);
   --theme-icon-dimmed-color: rgba(135, 135, 137, 0.9);
-  --theme-icon-extreme-dimmed-color: var(--grey-30);
   --theme-icon-checked-color: var(--blue-60);
   --theme-icon-error-color: var(--red-60);
   --theme-icon-warning-color: var(--yellow-65);
@@ -156,6 +158,7 @@
   --theme-text-color-alt: var(--grey-50);
   --theme-text-color-inactive: var(--grey-40);
   --theme-text-color-strong: var(--grey-90);
+  --theme-stack-trace-text: var(--red-70);
 
   --theme-highlight-green: var(--green-70);
   --theme-highlight-blue: var(--blue-55);
@@ -187,8 +190,8 @@
   --theme-graphs-full-blue: #00f;
 
   /* Common popup styles(used by HTMLTooltip and autocomplete) */
-  --theme-popup-background: -moz-field;
-  --theme-popup-color: -moz-fieldText;
+  --theme-popup-background: Field;
+  --theme-popup-color: FieldText;
   --theme-popup-border-color: ThreeDShadow;
   --theme-popup-dimmed: hsla(0, 0%, 80%, 0.3);
 
@@ -203,6 +206,16 @@
   --theme-toolbarbutton-active-background: var(--grey-90-a20);
   --theme-toolbarbutton-active-color: var(--grey-90);
 
+  /* Used for select elements */
+  /* Note: we don't use the pair of system properties Field/FieldText here (like
+   * above), because this lightgrey background makes it possible to remove the
+   * border, which is more stylish. The downsides is that we don't adjust with
+   * the OS' dark mode setting. Hopefully this trade-off is OK.
+   */
+  --theme-select-background: var(--grey-20);
+  --theme-select-color: #0c0c0d;
+  --theme-select-hover-border-color: var(--grey-30);
+
   /* Warning colors */
   --theme-warning-background: hsl(54, 100%, 92%);
   --theme-warning-border: rgba(215, 182, 0, 0.28); /* Yellow 60 + opacity */
@@ -215,17 +228,9 @@
   --theme-contrast-border: var(--yellow-60);
 }
 
-/*
- * For doorhangers elsewhere in Firefox, Mac uses fixed colors rather than
- * system colors.
- */
-:root[platform="mac"].theme-light {
-  --theme-popup-color: hsl(0, 0%, 10%);
-  --theme-popup-border-color: var(--grey-90-a20);
-}
-
 :root.theme-dark {
   --theme-body-background: #232327;
+  --theme-body-emphasized-background: var(--grey-70);
   --theme-sidebar-background: #18181a;
 
   /* Toolbar */
@@ -243,6 +248,11 @@
   /* Toolbar buttons */
   --toolbarbutton-background: var(--grey-70);
   --toolbarbutton-hover-background: var(--grey-70);
+  --toolbarbutton-focus-background: var(--grey-60);
+  --toolbarbutton-focus-color: var(--grey-30);
+  --toolbarbutton-checked-background: #204e8a;
+  --toolbarbutton-checked-focus-background: var(--blue-60);
+  --toolbarbutton-checked-color: #ffffff;
 
   /* Buttons */
   --theme-button-background: rgba(249, 249, 250, 0.1);
@@ -256,7 +266,6 @@
   --theme-selection-background: #204e8a;
   --theme-selection-background-hover: #353b48;
   --theme-selection-focus-background: var(--grey-60);
-  --theme-selection-focus-color: var(--grey-30);
   --theme-selection-color: #ffffff;
 
   /* Border color that splits the toolbars/panels/headers. */
@@ -267,7 +276,6 @@
   /* Icon colors */
   --theme-icon-color: rgba(249, 249, 250, 0.7);
   --theme-icon-dimmed-color: rgba(147, 147, 149, 0.9);
-  --theme-icon-extreme-dimmed-color: var(--grey-50);
   --theme-icon-checked-color: var(--blue-30);
   --theme-icon-error-color: var(--red-40);
   --theme-icon-warning-color: var(--yellow-60);
@@ -278,6 +286,7 @@
   --theme-text-color-alt: var(--grey-45);
   --theme-text-color-inactive: var(--grey-50);
   --theme-text-color-strong: var(--grey-30);
+  --theme-stack-trace-text: var(--red-50);
 
   --theme-highlight-green: #86de74;
   --theme-highlight-blue: #75bfff;
@@ -324,6 +333,11 @@
   --theme-toolbarbutton-checked-hover-color: var(--grey-30);
   --theme-toolbarbutton-active-background: var(--grey-10-a30);
   --theme-toolbarbutton-active-color: var(--grey-30);
+
+  /* Used for select elements */
+  --theme-select-background: var(--grey-60);
+  --theme-select-color: #fff;
+  --theme-select-hover-border-color: var(--grey-50);
 
   /* Warning colors */
   --theme-warning-background: hsl(42, 37%, 19%);
