--- a/devtools-tooltips.css
+++ b/devtools-tooltips.css
@@ -613,7 +613,7 @@ strong {
 .event-tooltip-debugger-icon {
   -moz-context-properties: stroke;
   stroke: var(--theme-icon-color);
-  background-image: url("chrome://devtools/content/shared/components/reps/images/jump-definition.svg");
+  background-image: url("./images/jump-definition.svg");
   background-repeat: no-repeat;
   background-position: center;
   width: 20px;
