--- a/debugger-App.css
+++ b/debugger-App.css
@@ -25,13 +25,11 @@ button {
   font-size: inherit;
 }
 
-button:hover,
-button:focus {
+button:hover {
   background-color: var(--theme-toolbar-background-hover);
 }
 
-.theme-dark button:hover,
-.theme-dark button:focus {
+.theme-dark button:hover {
   background-color: var(--theme-toolbar-hover);
 }
 
@@ -58,6 +56,52 @@ button:focus {
 
 .editor-container {
   width: 100%;
+  display: grid;
+  grid-template-areas:
+    "editor-header"
+    "editor       "
+    "notification "
+    "editor-footer";
+  grid-template-rows:
+    var(--editor-header-height)
+    1fr
+    auto
+    var(--editor-footer-height);
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+.editor-notification-footer {
+  background: var(--theme-warning-background);
+  border-top: 1px solid var(--theme-warning-border);
+  color: var(--theme-warning-color);
+  padding: 0.5em;
+  gap: 8px;
+  grid-area: notification;
+  display: flex;
+  /* center text within the notification */
+  align-items: center;
+
+  .info.icon {
+    align-self: normal;
+  }
+
+  .close-button {
+    /* set a fixed height in order to avoid having it flexed to full height */
+    height: 16px;
+    padding: 0;
+    /* put in top-right corner */
+    margin-inline-start: auto;
+    align-self: normal;
+
+    &::before {
+      display: block;
+      width: 16px;
+      height: 16px;
+      content: "";
+      background-image: url("chrome://devtools/skin/images/close.svg");
+    }
+  }
 }
 
 /* Utils */
