--- a/devtools-common.css
+++ b/devtools-common.css
@@ -13,27 +13,30 @@
   font: message-box;
   font-size: var(--theme-body-font-size);
 
+  /* TODO(bug 1022557): Perhaps we want to allow forced colors in devtools */
+  forced-color-adjust: none;
+
   --tab-line-hover-color: rgba(0,0,0,.2);
   --tab-line-selected-color: var(--blue-50);
   --toggle-thumb-color: white;
-  --toggle-track-color: var(--grey-30);
+  --toggle-track-color: var(--grey-50);
 
   --searchbox-no-match-background-color: #ffe5e5;
   --searchbox-no-match-stroke-color: var(--red-60);
+}
 
-  /* Default to light form controls */
+:root.theme-light {
   color-scheme: light;
 }
 
 :root.theme-dark {
+  color-scheme: dark;
+
   --tab-line-hover-color: rgba(255,255,255,.2);
   --toggle-thumb-color: var(--grey-40);
-  --toggle-track-color: var(--grey-60);
 
   --searchbox-no-match-background-color: #402325;
   --searchbox-no-match-stroke-color: var(--red-50);
-
-  color-scheme: dark;
 }
 
 :root[platform="mac"] {
@@ -109,6 +112,12 @@ button::selection {
   all: unset;
 }
 
+iframe {
+  border: 0;
+  min-width: 0;
+  min-height: 0;
+}
+
 /* Autocomplete Popup */
 .devtools-autocomplete-popup {
   overflow: hidden;
@@ -130,6 +139,8 @@ button::selection {
 
 .devtools-autocomplete-listbox {
   --autocomplete-item-padding-inline: 8px;
+  --autocomplete-item-color-swatch-size: 1em;
+  --autocomplete-item-color-swatch-margin-inline: 5px;
   appearance: none !important;
   background-color: transparent;
   border-width: 0px !important;
@@ -142,6 +153,7 @@ button::selection {
 
 .devtools-autocomplete-listbox .autocomplete-item {
   width: 100%;
+  box-sizing: border-box;
   background-color: transparent;
   color: var(--theme-popup-color);
   padding: 1px var(--autocomplete-item-padding-inline);
@@ -171,30 +183,15 @@ button::selection {
 .devtools-autocomplete-listbox .autocomplete-swatch {
   cursor: pointer;
   border-radius: 50%;
-  width: 1em;
-  height: 1em;
+  box-shadow: 0 0 0 1px #c4c4c4;
+  width: var(--autocomplete-item-color-swatch-size);
+  height: var(--autocomplete-item-color-swatch-size);
   vertical-align: middle;
   /* align the swatch with its value */
   margin-top: -1px;
-  margin-inline-end: 5px;
+  margin-inline: var(--autocomplete-item-color-swatch-margin-inline);
   display: inline-block;
   position: relative;
-}
-
-.devtools-autocomplete-listbox .autocomplete-colorswatch::before {
-  content: '';
-  background-color: #eee;
-  background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
-                    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
-  background-size: 12px 12px;
-  background-position: 0 0, 6px 6px;
-  position: absolute;
-  border-radius: 50%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
 }
 
 /* Rest of the dark and light theme */
@@ -237,68 +234,23 @@ button::selection {
   list-style-type: none;
 }
 
-/* links to source code, like displaying `myfile.js:45` */
-
-.devtools-source-link {
-  font-family: var(--monospace-font-family);
-  color: var(--theme-highlight-blue);
-  cursor: pointer;
-  white-space: nowrap;
-  display: flex;
-  text-decoration: none;
-  font-size: 11px;
-  width: 12em; /* probably should be changed for each tool */
-}
-
-.devtools-source-link:hover {
-  text-decoration: underline;
-}
-
-.devtools-source-link > .filename {
-  text-overflow: ellipsis;
-  text-align: end;
-  overflow: hidden;
-  margin: 2px 0px;
-  cursor: pointer;
-}
-
-.devtools-source-link > .line-number {
-  flex: none;
-  margin: 2px 0px;
-  cursor: pointer;
-}
-
 /* Keyboard focus highlight styles */
 
-:-moz-focusring {
+:focus-visible {
   outline: var(--theme-focus-outline);
-  outline-offset: -1px;
-}
+  outline-offset: var(--theme-outline-offset);
+  box-shadow: var(--theme-outline-box-shadow);
 
-textbox[focused="true"] {
-  border-color: var(--theme-focus-border-color-textbox);
-  box-shadow: var(--theme-focus-box-shadow-textbox);
-  transition: all 0.2s ease-in-out
-}
+  /* override properties set in global-shared.css for links  */
+  a& {
+    outline-color: var(--theme-focus-outline-color) !important;
+    outline-width: var(--theme-focus-outline-size) !important;
+  }
 
-textbox :-moz-focusring {
-  box-shadow: none;
-  outline: none;
-}
-
-/* Form fields should already have box-shadow hightlight */
-select:-moz-focusring,
-input[type="radio"]:-moz-focusring,
-input[type="checkbox"]:-moz-focusring,
-checkbox:-moz-focusring {
-  outline: none;
-}
-
-/* Tab and button of toolbox does not need to display outline */
-
-.devtools-button:-moz-focusring,
-.devtools-tab:-moz-focusring {
-  outline:none;
+  /* offset the outline for checkbox and radio buttons so it doesn't conflict with existing border */
+  :is(input[type="radio"], input[type="checkbox"], checkbox)& {
+    outline-offset: 2px;
+  }
 }
 
 /* Toolbar buttons */
@@ -310,7 +262,7 @@ checkbox:-moz-focusring {
   border-radius: 2px;
   color: var(--theme-body-color);
   transition: background-color 0.05s ease-in-out;
-  -moz-box-align: center;
+  align-items: center;
   text-shadow: none;
   padding: 2px;
   margin: 1px;
@@ -321,6 +273,9 @@ checkbox:-moz-focusring {
 
 .devtools-togglebutton {
   padding: 1px 6px;
+  border-block: 2px solid transparent;
+  /* Separate the outline from the button as it might have a similar background color */
+  outline-offset: 2px;
 }
 
 /* Remove system form border from devtools-button. */
@@ -356,13 +311,13 @@ checkbox:-moz-focusring {
   content: "";
 }
 
-.devtools-button.checked::before {
+.devtools-button:is(.checked, [aria-pressed="true"])::before {
   color: var(--theme-icon-checked-color);
 }
 
 /* Icon-only buttons */
 .devtools-button:hover::before,
-.devtools-button.checked::before {
+.devtools-button:is(.checked, [aria-pressed="true"])::before {
   opacity: 1;
 }
 
@@ -370,10 +325,6 @@ checkbox:-moz-focusring {
 .devtools-button:disabled {
   pointer-events: none;
   opacity: 0.5 !important;
-}
-
-.devtools-button:focus {
-  background-color: var(--theme-toolbar-hover);
 }
 
 .devtools-button:empty:not([aria-expanded="true"]):hover {
@@ -394,17 +345,17 @@ checkbox:-moz-focusring {
 
 /* Selectable button which is unchecked. */
 
-.devtools-button:not(:empty, .checked):hover,
-.devtools-button:empty:is(:hover:active,.checked),
+.devtools-button:not(:empty, .checked, [aria-pressed="true"]):hover,
+.devtools-button:empty:is(:hover:active,.checked, [aria-pressed="true"]),
 .devtools-button[aria-haspopup="menu"][aria-expanded="true"] {
   background-color: var(--toolbarbutton-hover-background);
 }
 
-.devtools-button:not(:empty, .checked):hover:active {
+.devtools-button:not(:empty, .checked, [aria-pressed="true"]):hover:active {
   background-color: var(--theme-selection-background-hover);
 }
 
-.devtools-button:not(:empty, .checked):focus {
+.devtools-button:not(:empty, .checked, [aria-pressed="true"]):focus {
   background-color: var(--toolbarbutton-focus-background);
   color: var(--toolbarbutton-focus-color);
 }
@@ -420,18 +371,19 @@ checkbox:-moz-focusring {
 
 /* Selectable button which is checked. */
 
-.devtools-button:not(:empty).checked {
+.devtools-button:not(:empty):is(.checked, [aria-pressed="true"]) {
   background: var(--toolbarbutton-checked-background);
   color: var(--toolbarbutton-checked-color);
-}
 
-.devtools-button:not(:empty).checked:focus {
-  background-color: var(--toolbarbutton-checked-focus-background);
+  &:focus {
+    background-color: var(--toolbarbutton-checked-focus-background);
+  }
 }
 
 .devtools-togglebutton[aria-pressed="true"] {
   background-color: var(--theme-toolbarbutton-checked-background);
   color: var(--theme-toolbarbutton-checked-color);
+  border-block-end-color: currentColor;
 }
 
 .devtools-togglebutton[aria-pressed="true"]:hover:not(:active) {
@@ -441,7 +393,6 @@ checkbox:-moz-focusring {
 
 .devtools-togglebutton:active {
   background: var(--theme-toolbarbutton-active-background);
-  color: var(--theme-toolbarbutton-active-color);
 }
 
 .devtools-togglebutton::-moz-focus-inner {
@@ -481,6 +432,13 @@ checkbox:-moz-focusring {
   background-color: var(--theme-body-background);
   color: var(--theme-body-color);
   flex-grow: 1;
+
+  &::placeholder {
+    /* override UA style */
+    opacity: 1;
+    /* Set a dimmed color that still gives us enough contrast  */
+    color: var(--theme-text-color-alt);
+  }
 }
 
 .devtools-searchinput,
@@ -517,6 +475,8 @@ checkbox:-moz-focusring {
 .devtools-searchbox {
   display: inline-flex;
   flex-grow: 1;
+  gap: 4px;
+  padding-inline-end: 4px;
   position: relative;
   border: 1px solid transparent;
   height: 100%;
@@ -525,20 +485,27 @@ checkbox:-moz-focusring {
 
 .devtools-searchbox > .devtools-searchinput,
 .devtools-searchbox > .devtools-filterinput {
-  /* Let .devtools-searchbox handle the background and border */
+  /* Those classes can be applied on <input>, which have a default styling.
+     We want .devtools-searchbox to handle the background, border and outline, so we
+     need to reset them here */
   background-color: transparent;
   border: none;
+  outline: none;
+  box-shadow: none;
   flex-grow: 1;
   min-width: 0;
   width: 100%;
 }
 
-.devtools-searchbox:focus-within,
-.devtools-textinput:focus,
-.devtools-searchinput:focus,
-.devtools-filterinput:focus {
-  border-color: var(--blue-50);
-  outline: none;
+/* Display an outline on the container when the child input is focused. If another element
+   is focused (e.g. a button), we only want the outline on that element */
+.devtools-searchbox:focus-within:has(input:focus-visible) {
+  outline: var(--theme-focus-outline);
+  outline-offset: -2px;
+
+  &.devtools-searchbox-no-match {
+    outline-color: var(--searchbox-no-match-stroke-color);
+  }
 }
 
 .devtools-searchbox-no-match {
@@ -550,7 +517,7 @@ checkbox:-moz-focusring {
 .devtools-searchinput-clear {
   flex: 0 0 auto;
   align-self: center;
-  margin: 0 4px;
+  margin: 0;
   padding: 0;
   border: 0;
   width: 16px;
@@ -624,12 +591,11 @@ checkbox:-moz-focusring {
   fill: var(--theme-selection-color);
 }
 
-.theme-twisty:-moz-focusring {
-  outline-style: none;
-}
-
-.theme-twisty[open],
-.theme-twisty.open {
+.theme-twisty:is(
+  .open,
+  [open],
+  [aria-expanded="true"]
+) {
   transform: none;
 }
 
@@ -680,6 +646,8 @@ checkbox:-moz-focusring {
   background-position: center;
   -moz-context-properties: fill;
   fill: var(--theme-icon-color);
+  /* The button is often displayed next to the window edge, so adjust the layout to make the offset visible */
+  outline-offset: -2px;
 }
 
 .all-tabs-menu:hover {
@@ -710,7 +678,8 @@ checkbox:-moz-focusring {
 }
 
 .devtools-tab.selected .devtools-tab-line,
-.tabs-menu-item.is-active .devtools-tab-line {
+/* don't show the line when focus is visible to prevent overlapping with the outline */
+.tabs-menu-item.is-active .devtools-tab-line:not(:has(+ [role="tab"]:focus-visible)) {
   background: var(--tab-line-selected-color);
   opacity: 1;
   transform: scaleX(1);
@@ -764,14 +733,6 @@ checkbox:-moz-focusring {
 /* For right-to-left layout, the toggle thumb goes in the opposite direction. */
 html[dir="rtl"] .devtools-checkbox-toggle {
   --x-pos: -.15em;
-}
-
-.devtools-checkbox-toggle:not(:checked):focus {
-  border-color: var(--blue-55);
-}
-
-.devtools-checkbox-toggle:checked:focus {
-  background-color: var(--blue-40);
 }
 
 .devtools-checkbox-toggle:checked {
